<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.create.CreateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_gravity="center"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="24dp"
            android:text="@string/tambah_wisata"
            android:textColor="#4A74A5"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:color/darker_gray"
            android:backgroundTint="#EEF2F7"
            android:hint="@string/name"
            android:padding="16dp"
            android:textColorHint="#4A74A5" />

        <EditText
            android:id="@+id/editTextLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:color/darker_gray"
            android:backgroundTint="#EEF2F7"
            android:hint="@string/location"
            android:padding="16dp"
            android:textColorHint="#4A74A5" />

        <EditText
            android:id="@+id/editTextDeskripsi"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/darker_gray"
            android:backgroundTint="#EEF2F7"
            android:gravity="top"
            android:hint="@string/description"
            android:padding="16dp"
            android:textColorHint="#4A74A5" />

        <Button
            android:id="@+id/buttonSimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#5B6E99"
            android:padding="12dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
